--- a/src/views/website/pages/MAA.ejs
+++ b/src/views/website/pages/MAA.ejs
@@ -192,7 +192,7 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch mx-auto">
               <div class="member" data-aos="fade-up" data-aos-delay="50">
                 <div class="member-img">
-                  <img src="/website/assets/img/ministryHeads/Sania_MAA.jpg" class="img-fluid" alt="">
+                  <img src="/website/assets/img/ministryHeads/TeeshaAurora-UG2023-MAA.jpeg" class="img-fluid" alt="">
                 </div>
                 <div class="member-info">
                   <h4><a href="mailto:teesha.aurora_ug2023@ashoka.edu.in">Teesha Aurora (UG2023)</a></h4>
