image extension fix

--- a/src/views/website/pages/CLM.ejs
+++ b/src/views/website/pages/CLM.ejs
@@ -177,7 +177,7 @@
               <div class="col-lg-3 col-md-6 d-flex align-items-stretch mx-auto">
                 <div class="member" data-aos="fade-up" data-aos-delay="50">
                   <div class="member-img">
-                    <img src="assets/img/ministryHeads/AvekaJain-UG2023-CLM.jpg" class="img-fluid" alt="">
+                    <img src="assets/img/ministryHeads/AvekaJain-UG2023-CLM.JPG" class="img-fluid" alt="">
                   </div>
                   <div class="member-info">
                     <h4><a href="mailto:aveka.jain_ug2023@ashoka.edu.in">Aveka Jain (UG2023)</a></h4>
