--- a/src/views/website/pages/hor-about.ejs
+++ b/src/views/website/pages/hor-about.ejs
@@ -141,7 +141,7 @@
               <div class="col-lg-6 col-md-6 d-flex align-items-stretch mx-auto">
                 <div class="member" data-aos="fade-up" data-aos-delay="50">
                   <div class="member-img">
-                    <img src="assets/img/SnehaMenon-UG25-SpeakerOfHoR.jpg" class="img-fluid" alt="">
+                    <img src="assets/img/SnehaMenon-UG25-SpeakerOfHoR.JPG" class="img-fluid" alt="">
                   </div>
                   <div class="member-info">
                     <h4>Sneha Menon (UG25)</h4>
