--- a/src/views/website/pages/index.ejs
+++ b/src/views/website/pages/index.ejs
@@ -142,7 +142,7 @@
                 class="col-lg-4 col-md-6 d-flex align-items-stretch mx-auto">
                 <div class="member" data-aos="fade-up" data-aos-delay="50">
                   <div style="max-width:800px;max-height:500px;object-fit: cover;" class="member-img">
-                    <img src="assets/img/InshaHusain-UG25-President.jpg" class="img-fluid" alt="">
+                    <img src="assets/img/InshaHusain-UG25-President.JPG" class="img-fluid" alt="">
                     <div class="social">
                       <!-- <a href=""><i class="icofont-twitter"></i></a>
                   <a href=""><i class="icofont-facebook"></i></a> -->
@@ -160,7 +160,7 @@
                 class="col-lg-4 col-md-6 d-flex align-items-stretch mx-auto">
                 <div class="member" data-aos="fade-up" data-aos-delay="200">
                   <div style="max-width:800px;max-height:500px;" class="member-img">
-                    <img src="assets/img/AhanaWalanju-UG25-VP.jpg" class="img-fluid" alt="">
+                    <img src="assets/img/AhanaWalanju-UG25-VP.JPG" class="img-fluid" alt="">
                     <div class="social">
                       <!-- <a href=""><i class="icofont-twitter"></i></a>
                   <a href=""><i class="icofont-facebook"></i></a> -->
