--- a/src/views/website/pages/CWB.ejs
+++ b/src/views/website/pages/CWB.ejs
@@ -195,8 +195,7 @@
               <div class="col-lg-3 col-md-6 d-flex align-items-stretch mx-auto">
                 <div class="member" data-aos="fade-up" data-aos-delay="50">
                   <div class="member-img">
-                    <img src="assets/img/ministryHeads/AjiteshVishwanath-UG2023-MCWB.jpg" class="img-fluid"
-                      alt="">
+                    <img src="assets/img/ministryHeads/AjiteshVishwanath-UG2023-MCWB.JPG" class="img-fluid" alt="">
                   </div>
                   <div class="member-info">
                     <h4><a href="mailto:ajitesh.vishwanath_ug2023@ashoka.edu.in">Ajitesh Vishwanath (UG2023)</a></h4>
