--- a/src/views/website/pages/JAZBAA.ejs
+++ b/src/views/website/pages/JAZBAA.ejs
@@ -198,7 +198,7 @@
               <div class="col-lg-3 col-md-6 d-flex align-items-stretch mx-auto">
                 <div class="member" data-aos="fade-up" data-aos-delay="50">
                   <div class="member-img">
-                    <img src="assets/img/ministryHeads/SiaSarin-UG2023-CulMin.jpg" class="img-fluid" alt="">
+                    <img src="assets/img/ministryHeads/SiaSarin-UG2023-CulMin.JPG" class="img-fluid" alt="">
                   </div>
                   <div class="member-info">
                     <h4><a href="mailto:sia.sarin_ug2023@ashoka.edu.in">Sia Sarin (UG2023)</a></h4>
