--- a/src/views/website/pages/TARANG.ejs
+++ b/src/views/website/pages/TARANG.ejs
@@ -181,8 +181,8 @@
               <div class="col-lg-3 col-md-6 d-flex align-items-stretch mx-auto">
                 <div class="member" data-aos="fade-up" data-aos-delay="50">
                   <div class="member-img">
-                    <img src="assets/img/ministryHeads/SanviMagod-UG2023-EnvironmentMinister.jpg"
-                      class="img-fluid" alt="">
+                    <img src="assets/img/ministryHeads/SanviMagod-UG2023-EnvironmentMinister.JPG" class="img-fluid"
+                      alt="">
                   </div>
                   <div class="member-info">
                     <h4><a href="mailto:saanvi.magod_ug2023@ashoka.edu.in">Saanvi Magod (UG2023)</a></h4>
