--- a/src/views/website/pages/sportsmin.ejs
+++ b/src/views/website/pages/sportsmin.ejs
@@ -179,8 +179,7 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch mx-auto">
               <div class="member" data-aos="fade-up" data-aos-delay="50">
                 <div class="member-img">
-                  <img src="assets/img/ministryHeads/AishaLowe-UG2023-SportsMinister.jpg" class="img-fluid"
-                    alt="">
+                  <img src="assets/img/ministryHeads/AishaLowe-UG2023-SportsMinister.JPG" class="img-fluid" alt="">
                 </div>
                 <div class="member-info">
                   <h4><a href="mailto:aisha.lowe_ug2023@ashoka.edu.in">Aisha Lowe (UG2023)</a></h4>
