--- a/src/views/website/partials/menu.ejs
+++ b/src/views/website/partials/menu.ejs
@@ -11,28 +11,28 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="<%= activePage === 'home' ? 'active' : '' %>"><a href="/">Home</a></li>
-          <li class="<%= activePage === 'about' ? 'active' : '' %>"><a href="/about">About</a></li>
+          <li class="<%= activePage === 'home' ? 'active' : '' %>"><a href="./">Home</a></li>
+          <li class="<%= activePage === 'about' ? 'active' : '' %>"><a href="about">About</a></li>
           <li class="<%= (activePage.includes('hor') || activePage.includes('council')) ? 'active' : '' %> drop-down"><a href="">Elected Reps</a>
             <ul>
-                <li class="<%= activePage === 'council' ? 'active' : '' %>"><a href="/council">Council</a></li>
-                <li class="<%= activePage === 'hor-about' ? 'active' : '' %>"><a href="/hor/about">HoR About</a></li>
+                <li class="<%= activePage === 'council' ? 'active' : '' %>"><a href="council">Council</a></li>
+                <li class="<%= activePage === 'hor-about' ? 'active' : '' %>"><a href="hor/about">HoR About</a></li>
                 <!-- <li class="<%= activePage === 'hor-work' ? 'active' : '' %>"><a href="/hor/work">Work</a></li> -->
-                <li class="<%= activePage === 'hor-committees' ? 'active' : '' %>"><a href="/hor/committees">HoR Committees</a></li>
+                <li class="<%= activePage === 'hor-committees' ? 'active' : '' %>"><a href="hor/committees">HoR Committees</a></li>
             </ul>
           </li>
           <li class="<%= activePage.includes('cabinet') ? 'active' : '' %> drop-down"><a href="">Cabinet</a>
             <ul>
-                <li class="<%= activePage === 'cabinet-about' ? 'active' : '' %>"><a href="/cabinet/about">About</a></li>
-                <li class="<%= activePage === 'cabinet-culmin' ? 'active' : '' %>"><a href="/cabinet/culmin">Jazbaa</a></li>
-                <li class="<%= activePage === 'cabinet-techmin' ? 'active' : '' %>"><a href="/cabinet/techmin">Technology Ministry</a></li>
-                <li class="<%= activePage === 'cabinet-maa' ? 'active' : '' %>"><a href="/cabinet/maa">Ministry of Academic Affairs</a></li>
+                <li class="<%= activePage === 'cabinet-about' ? 'active' : '' %>"><a href="cabinet/about">About</a></li>
+                <li class="<%= activePage === 'cabinet-culmin' ? 'active' : '' %>"><a href="cabinet/culmin">Jazbaa</a></li>
+                <li class="<%= activePage === 'cabinet-techmin' ? 'active' : '' %>"><a href="cabinet/techmin">Technology Ministry</a></li>
+                <li class="<%= activePage === 'cabinet-maa' ? 'active' : '' %>"><a href="cabinet/maa">Ministry of Academic Affairs</a></li>
                 <!-- <li class="<%= activePage === 'cabinet-mpa' ? 'active' : '' %>"><a href="/cabinet/mpa">Ministry of Parliamentary Affairs</a></li> -->
-                <li class="<%= activePage === 'cabinet-envmin' ? 'active' : '' %>"><a href="/cabinet/envmin">Environment Ministry</a></li>
-                <li class="<%= activePage === 'cabinet-mcwb' ? 'active' : '' %>"><a href="/cabinet/mcwb">Ministry of Community and Well Being</a></li>
-                <li class="<%= activePage === 'cabinet-clm' ? 'active' : '' %>"><a href="/cabinet/clm">Campus Life Ministry</a></li>
+                <li class="<%= activePage === 'cabinet-envmin' ? 'active' : '' %>"><a href="cabinet/envmin">Environment Ministry</a></li>
+                <li class="<%= activePage === 'cabinet-mcwb' ? 'active' : '' %>"><a href="cabinet/mcwb">Ministry of Community and Well Being</a></li>
+                <li class="<%= activePage === 'cabinet-clm' ? 'active' : '' %>"><a href="cabinet/clm">Campus Life Ministry</a></li>
                 <!-- <li class="<%= activePage === 'cabinet-finance' ? 'active' : '' %>"><a href="/cabinet/finance">Finance Ministry</a></li> -->
-                <li class="<%= activePage === 'cabinet-sport' ? 'active' : '' %>"><a href="/cabinet/sport">Sports Ministry</a></li>
+                <li class="<%= activePage === 'cabinet-sport' ? 'active' : '' %>"><a href="cabinet/sport">Sports Ministry</a></li>
             </ul>
           </li>
           <!-- <li class="drop-down"><a href="">Documents</a>
@@ -47,8 +47,8 @@
                 <!-- <li class="<%= activePage === 'resources-amenities' ? 'active' : '' %>"><a href="/resources/amenities">Amenities</a></li> -->
                 <!-- <li class="<%= activePage === 'resources-food' ? 'active' : '' %>"><a href="/resources/food">Food</a></li> -->
                 <!-- <li class="<%= activePage === 'resources-health' ? 'active' : '' %>"><a href="/resources/health">Health</a></li> -->
-                <li class="<%= activePage === 'resources-helpful-resources' ? 'active' : '' %>"><a href="/resources/helpful-resources">Helpful Resources</a></li>
-                <li class="<%= activePage === 'resources-aura' ? 'active' : '' %>"><a href="/resources/aura">AURA</a></li>
+                <li class="<%= activePage === 'resources-helpful-resources' ? 'active' : '' %>"><a href="resources/helpful-resources">Helpful Resources</a></li>
+                <li class="<%= activePage === 'resources-aura' ? 'active' : '' %>"><a href="resources/aura">AURA</a></li>
             </ul>
           </li>
           <li><a target="_blank" href="https://ashoka.edu.in">AU Website</a></li>
