fix: add base tag for relative paths

--- a/src/views/website/pages/CWB.ejs
+++ b/src/views/website/pages/CWB.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <%- include("../partials/base") %>
   <title>MCWB (Ministry of Community Well-Being) - AUSG Cabinet</title>
 
   <script src="assets/js/theme.js"></script>
