--- a/src/views/website/pages/index.ejs
+++ b/src/views/website/pages/index.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <%- include("../partials/base") %>
   <title>Ashoka University Student Government</title>
   <script src="assets/js/theme.js
   "></script>
