--- a/src/views/website/pages/aura.ejs
+++ b/src/views/website/pages/aura.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <%- include("../partials/base") %>
     <title>Ashoka University Resident Assistants (AURA) - AUSG</title>
 
     <script src="assets/js/theme.js"></script>
