--- a/src/views/website/pages/council.ejs
+++ b/src/views/website/pages/council.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <%- include("../partials/base") %>
     <title>AUSG Council</title>
 
     <script src="assets/js/theme.js"></script>
