--- a/src/views/website/pages/helpful-resources.ejs
+++ b/src/views/website/pages/helpful-resources.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <%- include("../partials/base") %>
     <title>Helpful Resources - AUSG</title>
 
     <script src="assets/js/theme.js"></script>
