--- a/src/views/website/pages/hor-about.ejs
+++ b/src/views/website/pages/hor-about.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <%- include("../partials/base") %>
   <title>AUSG House of Representatives</title>
 
   <script src="assets/js/theme.js"></script>
