--- a/src/views/website/pages/sportsmin.ejs
+++ b/src/views/website/pages/sportsmin.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <%- include("../partials/base") %>
   <title>Sports Ministry - AUSG Cabinet</title>
 
   <script src="assets/js/theme.js"></script>
