hor and council update

--- a/src/views/website/pages/council.ejs
+++ b/src/views/website/pages/council.ejs
@@ -2,62 +2,63 @@
 <html lang="en">
 
 <head>
-  <%- include("../partials/base") %>
-    <title>AUSG Council</title>
+    <%- include("../partials/base") %>
+        <title>AUSG Council</title>
 
-    <script src="assets/js/theme.js"></script>
+        <script src="assets/js/theme.js"></script>
 
-    <!-- SEO Meta Tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description"
-        content="Learn about the council of the Ashoka University Student Government (AUSG), their roles in addressing student issues, and the council members dedicated to improving campus life." />
-    <meta name="keywords"
-        content="Ashoka University, AUSG Council, Student Government, Council Members, CADI Policy, Campus Issues, Teach-ins, Student Representation, Ashoka Student Advocacy, Council Committees, Student Cohort Issues, Ashoka University Administration, Council Activities, Student Well-being" />
-    <meta name="author" content="Ashoka University Student Government" />
+        <!-- SEO Meta Tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description"
+            content="Learn about the council of the Ashoka University Student Government (AUSG), their roles in addressing student issues, and the council members dedicated to improving campus life." />
+        <meta name="keywords"
+            content="Ashoka University, AUSG Council, Student Government, Council Members, CADI Policy, Campus Issues, Teach-ins, Student Representation, Ashoka Student Advocacy, Council Committees, Student Cohort Issues, Ashoka University Administration, Council Activities, Student Well-being" />
+        <meta name="author" content="Ashoka University Student Government" />
 
-    <!-- Open Graph Meta Tags for Social Sharing -->
-    <meta property="og:title" content="Council - Ashoka University Student Government (AUSG)" />
-    <meta property="og:description"
-        content="Explore the councils of the Ashoka University Student Government (AUSG), their initiatives, and the dedicated members representing student interests." />
-    <meta property="og:image" content="to_be_inserted" />
-    <meta property="og:url" content="https://sg.ashoka.edu.in/council" />
-    <meta property="og:type" content="website" />
+        <!-- Open Graph Meta Tags for Social Sharing -->
+        <meta property="og:title" content="Council - Ashoka University Student Government (AUSG)" />
+        <meta property="og:description"
+            content="Explore the councils of the Ashoka University Student Government (AUSG), their initiatives, and the dedicated members representing student interests." />
+        <meta property="og:image" content="to_be_inserted" />
+        <meta property="og:url" content="https://sg.ashoka.edu.in/council" />
+        <meta property="og:type" content="website" />
 
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Councils - Ashoka University Student Government" />
-    <meta name="twitter:description"
-        content="Discover the AUSG councils, their members, and their efforts to represent student issues and improve campus life." />
-    <meta name="twitter:image" content="to_be_inserted" />
-    <meta name="twitter:site" content="@ashokaunisg" />
+        <!-- Twitter Card Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Councils - Ashoka University Student Government" />
+        <meta name="twitter:description"
+            content="Discover the AUSG councils, their members, and their efforts to represent student issues and improve campus life." />
+        <meta name="twitter:image" content="to_be_inserted" />
+        <meta name="twitter:site" content="@ashokaunisg" />
 
-    <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- Favicons -->
+        <link href="assets/img/favicon.png" rel="icon">
+        <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+        <!-- Google Fonts -->
+        <link
+            href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+            rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 
-    <!-- Vendor CSS Files -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/owl.carousel//assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+        <!-- Vendor CSS Files -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+        <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+        <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+        <link href="assets/vendor/owl.carousel//assets/owl.carousel.min.css" rel="stylesheet">
+        <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+        <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
-    <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
+        <!-- Template Main CSS File -->
+        <link href="assets/css/style.css" rel="stylesheet">
 
-    <!-- =======================================================
+        <!-- =======================================================
   * Template Name: Vesperr - v3.0.3
   * Template URL: https://bootstrapmade.com/vesperr-free-bootstrap-template/
   * Author: BootstrapMade.com
@@ -143,15 +144,11 @@
                                         <br>
                                         Ayush Solapurkar (UG2023)
                                         <br>
-                                        Hima Madhu (UG2024)
-                                        <br>
                                         Karandeep Gill (UG25)
                                         <br>
                                         Kritin Bhasin (UG2024)
                                         <br>
                                         Partho Roy (UG2024)
-                                        <br>
-                                        Sahaj Kishen (UG25)
                                         <br>
                                         Shatakshi Shelly (UG2024)
                                         <br>
